# DumpSleuth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  dump_strings.txt  pyproject.toml  setup.py  tatus
analyzer/: common.py  dump_analyzer.py  manual_analysis.py  string_extractor.py  test_encoding.py
config/: default.yaml
docs/: EXAMPLE_OUTPUT.md  EXAMPLE_OUTPUT_root.md  README.md  README_root.md  SETUP_GUIDE.md  SETUP_GUIDE_root.md  VIRTUAL_ENV_GUIDE.md  VIRTUAL_ENV_GUIDE_root.md  WINDBG_COMMANDS.txt
dumps/: .gitkeep  README.md
dumps/temp/: .gitkeep
examples/: README.md  basic_analysis.py  batch_processing.py  custom_plugin_example.py
requirements/: base.txt  dev.txt
scripts/: activate_venv.bat  activate_venv_full.bat  quick_start.bat  requirements.txt
src/dumpsleuth/: __init__.py
src/dumpsleuth/core/: __init__.py  analyzer.py  config.py  parser.py  paths.py  plugin.py
src/dumpsleuth/extractors/: network.py  pattern_matcher.py  processes.py  registry.py  strings_plugin.py
src/dumpsleuth/reporting/: __init__.py  base.py  html_reporter.py  json_reporter.py  markdown_reporter.py
src/dumpsleuth/ui/: cli.py
tests/: test_get_dump_info.py
tools/: hex_viewer.py  process_info.py
